[package]
name = "easy_solana"
version = "0.1.0"
edition = "2021"
authors = "jong319"
description = "EasySolana simplifies querying data and writing transactions on the Solana blockchain network."


[dependencies]
borsh = "1.5.3"
dotenv = "0.15.0"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
solana-account-decoder = "2.1.1"
solana-client = "2.1.0"
solana-program = "2.1.0"
solana-sdk = "2.1.0"
solana-transaction-status-client-types = "2.1.1"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-test = "0.4.4"